--- a/apps/libery_dungeon/package.json
+++ b/apps/libery_dungeon/package.json
@@ -18,8 +18,5 @@
 		"typescript": "^5.6.2",
 		"vite": "^5.0.3"
 	},
-	"type": "module",
-	"dependencies": {
-		"mousetrap": "^1.6.5"
-	}
+	"type": "module"
 }
