--- a/apps/libery_dungeon/package.json
+++ b/apps/libery_dungeon/package.json
@@ -8,12 +8,12 @@
 		"preview": "vite preview"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@sveltejs/adapter-auto": "3.0.0",
+		"@sveltejs/kit": "2.0.0",
+		"@sveltejs/vite-plugin-svelte": "3.0.0",
 		"autoprefixer": "^10.4.20",
 		"postcss": "^8.4.41",
-		"svelte": "^4.2.7",
+		"svelte": "4.2.7",
 		"tailwindcss": "^3.4.10",
 		"typescript": "^5.6.2",
 		"vite": "^5.0.3"
