--- a/apps/libery_dungeon/jsconfig.json
+++ b/apps/libery_dungeon/jsconfig.json
@@ -2,14 +2,14 @@
 	"extends": "./.svelte-kit/tsconfig.json",
 	"compilerOptions": {
 		"allowJs": true,
-		"checkJs": false,
+		"checkJs": true,
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
 		"resolveJsonModule": true,
 		"skipLibCheck": true,
 		"sourceMap": true,
 		"strict": true,
-		"moduleResolution": "bundler"
-
+		"moduleResolution": "bundler",
+		"strictNullChecks": true
 	}
 }
