chore: update .gitignore to exclude vite.config.js timestamp file

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@ Server/PandasAdminTool/pandas_fixer_tool.egg-info/PKG-INFO
 
 
 /**/secretfile_*
+apps/libery_dungeon/vite.config.js.timestamp-1742961784073-f78bf6437ef37.mjs
